--- a/exceptional-realty-bootstrapped/index.html
+++ b/exceptional-realty-bootstrapped/index.html
@@ -27,10 +27,30 @@
 
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
         </div>
-        
       </div>
+
+      <div class="row">
+        <div class="col-sm-8">
+          <figure>
+            <video controls>
+              <source src="videos/real-estate.mp4" type="video/mp4">
+              <source src="videos/real-estate.ogv" type="video/ogg">
+              Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
+            </video>
+            <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+          </figure>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          Company news
+        </div>
+
+      </div>
+
     </div> <!-- container -->
-  
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
