automatically backed up by learn

--- a/exceptional-realty-bootstrapped/index.html
+++ b/exceptional-realty-bootstrapped/index.html
@@ -47,7 +47,12 @@
           <h3>Company News</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil sapiente tempora molestias quis ducimus ipsum laborum vel. Tempore perspiciatis ea error dignissimos libero recusandae explicabo.</p>
         </div>
+      </div>
 
+      <div class="row">
+        <div class="col-sm-4">Contact</div>
+        <div class="col-sm-4">Links</div>
+        <div class="col-sm-4">Social</div>
       </div>
 
     </div> <!-- container -->
