--- a/exceptional-realty-bootstrapped/index.html
+++ b/exceptional-realty-bootstrapped/index.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-sm-4">Contact</div>
         <div class="col-sm-4">Links</div>
-        <div class="col-sm-4">Social</div>
+        <div class="col-sm-4">Follow</div>
       </div>
 
     </div> <!-- container -->
