--- a/exceptional-realty-bootstrapped/index.html
+++ b/exceptional-realty-bootstrapped/index.html
@@ -79,6 +79,12 @@
               <a href="#" target="_blank">Twitter</a>
             </p>
         </div>
+      </div> <!--row -->
+
+      <div class="row">
+        <div class="col-sm-12">
+
+        </div>
       </div>
 
     </div> <!-- container -->
