--- a/exceptional-realty-bootstrapped/index.html
+++ b/exceptional-realty-bootstrapped/index.html
@@ -27,7 +27,7 @@
 
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
         </div>
-      </div>
+      </div> <!--row -->
 
       <div class="row">
         <div class="col-sm-8">
@@ -40,15 +40,14 @@
             <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
           </figure>
         </div>
-
+      </div> <!--row -->
 
       <div class="row">
         <div class="col-sm-4">
           <h3>Company News</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil sapiente tempora molestias quis ducimus ipsum laborum vel. Tempore perspiciatis ea error dignissimos libero recusandae explicabo.</p>
         </div>
-      </div>
-      </div>
+      </div> <!--row -->
       <div class="row">
         <div class="col-sm-4">
           <h3>Contact</h3>
